<!--
  ~     Bitconnect Carlos Soundboard
  ~     Copyright (C) 2018  jkl1690
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="action_about">About</string>
    <string name="app_name">Bitconnect Carlos Soundboard</string>
    <string name="app_version">1.1</string>
    <string name="version_title">Version</string>
    <string name="open_source_about">This application is built using Open Source software</string>
    <string name="licences">Open Source Licences</string>
    <string name="app_licence_title">Licence</string>
    <string name="developer">Developer</string>
    <string name="developer_name">jklaw</string>
    <string name="github">Github</string>
    <string name="github_summary">View source on Github</string>
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="rate_title">Rate</string>
    <string name="rate_play">Rate on Google Play</string>
    <string name="rate_play_summary">Rate the app on Google Play</string>
    <string name="donate_title">Donate</string>
    <string name="donate_summary">If you\'re feeling generous, support me and buy me a beer!</string>
    <string-array name="sounds">
        <item>137 Days</item>
        <item>$140000</item>
        <item>$25610</item>
        <item>Bank</item>
        <item>Bitcoins</item>
        <item>Bitconnect 1</item>
        <item>Bitconnect 2</item>
        <item>Con Artist</item>
        <item>Everyday</item>
        <item>Explode</item>
        <item>Faith and Belief</item>
        <item>Financially Independently</item>
        <item>Ha ha ha</item>
        <item>Hey Hey Hey (Short)</item>
        <item>Hey Hey Hey (Long)</item>
        <item>I love Bitconnect</item>
        <item>Lose Money</item>
        <item>Mmmmmmmmnonono</item>
        <item>My name is Carlos</item>
        <item>Naw</item>
        <item>Nononono</item>
        <item>One hun- I mean</item>
        <item>Real</item>
        <item>Scam</item>
        <item>Scammer's game</item>
        <item>Seed</item>
        <item>Table</item>
        <item>Tell you Something</item>
        <item>Took Money</item>
        <item>Vietnam</item>
        <item>We are Coming</item>
        <item>We are Starting</item>
        <item>What?</item>
        <item>What am I gonna do?</item>
        <item>Wife</item>
        <item>Woah</item>
        <item>Wooooooooooo</item>
        <item>Wowowowowowow</item>
        <item>Wusup</item>
        <item>Wusuwusup</item>
        <item>Wusuwusuwusu</item>
        <item>Yeyeyeyeyeye</item>
    </string-array>
    <string-array name="donation_google_catalog_values">
        <item>2 Pounds</item>
        <item>5 Pounds</item>
    </string-array>
    <string name="donation_paypal_item">Donation</string>
    <string name="title_about">About</string>
</resources>
